--- a/.github/workflows/youtube-cards.yml
+++ b/.github/workflows/youtube-cards.yml
@@ -18,7 +18,7 @@ jobs:
           channel_id: UCX_iYUt3XeKZrHqWvgCvaxA
           lang: en
           comment_tag_name: YOUTUBE-CARDS
-          
+          youtube_api_key: ${{ secrets.YOUTUBE_API_KEY }}
           max_videos: 6
           base_url: https://ytcards.demolab.com/
           card_width: 250
@@ -29,7 +29,7 @@ jobs:
           theme_context_light: '{ "background_color": "#ffffff", "title_color": "#24292f", "stats_color": "#57606a" }'
           theme_context_dark: '{ "background_color": "#0d1117", "title_color": "#ffffff", "stats_color": "#dedede" }'
           max_title_lines: 2
-          show_duration: false # Requires YouTube API Key (see Wiki)
+          show_duration: true # Requires YouTube API Key (see Wiki)
           author_name: GitHub Actions
           author_email: 41898282+github-actions[bot]@users.noreply.github.com
           commit_message: "docs(readme): Update YouTube cards"
